# sphinxcontrib-opencontracting

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  ocds_sphinx_directives.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  lint.yml  pypi.yml
docs/: changelog.rst  conf.py  index.rst  requirements.txt
sphinxcontrib/: opencontracting.py
tests/: __init__.py  test_directives.py
tests/fixtures/: code-description-i18n.html  code-description.html  codelisttable-i18n.html  codelisttable.html  extensionexplorerlinklist.html  extensionlist.html  field-description.html  i18n.html  nonreadable.html  workedexample.html  workedexamplelist.html
tests/fixtures/code-description/: codelist.csv  index.rst
tests/fixtures/code-description-i18n/: codelist.csv
tests/fixtures/code-description-missing-column/: conf.py
tests/fixtures/codelisttable-i18n/: codelist.csv
tests/fixtures/extensionexplorerlinklist/: conf.py
tests/fixtures/extensionexplorerlinklist-non-existing/: conf.py
tests/fixtures/extensionlist/: index.rst
tests/fixtures/field-description/: index.rst
tests/fixtures/workedexample/: index.rst
tests/fixtures/workedexamplelist/: conf.py  index.rst
tests/fixtures/workedexamplelist-non-existing/: index.rst
