[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinxcontrib-opencontracting"
version = "1.0.0"
authors = [{name = "Open Contracting Partnership", email = "data@open-contracting.org"}]
description = "Provides Sphinx directives for the documentation of the Open Contracting Data Standard"
readme = "README.rst"
license = {text = "BSD"}
urls = {Homepage = "https://github.com/open-contracting/sphinxcontrib-opencontracting"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Framework :: Sphinx :: Extension",
]
dependencies = [
    "docutils>=0.22",
    "jsonpointer",
    "MyST-Parser",
    "requests",
    "ocdsextensionregistry>=0.0.8",
    "sphinx",
]

[project.optional-dependencies]
test = [
    "coverage",
    "lxml",
    "pytest",
    "sphinx>=4.4.0",
]

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "tests.*",
]

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "ISC001", "PERF203", "PLR091", "Q000",
    "ARG001",  # sphinx
    "D1",
    "INP001",  # namespace package
    "PTH",
    "RUF012",  # sphinx
    "TRY003",  # errors
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["D100", "INP001"]
"tests/*" = [
    "ARG001", "D", "FBT003", "INP001", "PLR2004", "S", "TRY003",
]
